# docs/swagger.yaml
@@ -35,6 +35,25 @@ definitions:
       type:
         type: string
     type: object
+  model.GetTransactionUserResponse:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      product:
+        $ref: '#/definitions/model.Product'
+      product_id:
+        type: integer
+      quantity:
+        type: integer
+      total_price:
+        type: integer
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    type: object
   model.Product:
     properties:
       category_id:
@@ -73,6 +92,28 @@ definitions:
         type: integer
       title:
         type: string
+    type: object
+  model.TransactionCreate:
+    properties:
+      product_id:
+        type: integer
+      quantity:
+        type: integer
+    type: object
+  model.TransactionCreateResponse:
+    properties:
+      message:
+        type: string
+      transaction_bill:
+        description: TransactionBill represents the transaction bill information.
+        properties:
+          product_title:
+            type: string
+          quantity:
+            type: integer
+          total_price:
+            type: integer
+        type: object
     type: object
   model.TransactionHistory:
     properties:
@@ -435,6 +476,107 @@ paths:
       summary: Update a Product.
       tags:
       - Products
+  /transactions:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Transaction object to be created
+        in: body
+        name: model.TransactionHistory
+        required: true
+        schema:
+          $ref: '#/definitions/model.TransactionCreate'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Transaction created successfully
+          schema:
+            $ref: '#/definitions/model.TransactionCreateResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "500":
+          description: Server Error
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+      summary: Creates a new transaction
+      tags:
+      - Transaction
+  /transactions/my-transactions:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Transactions fetched successfully
+          schema:
+            items:
+              $ref: '#/definitions/model.GetTransactionUserResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "500":
+          description: Server Error
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+      summary: Get User Transactions.
+      tags:
+      - Transaction
+  /transactions/user-transactions:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Transactions fetched successfully
+          schema:
+            items:
+              $ref: '#/definitions/model.TransactionHistory'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "500":
+          description: Server Error
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+      summary: Get All Transactions.
+      tags:
+      - Transaction
   /users/register:
     post:
       consumes:
